--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         },
         "require": {
                 "php": ">=5.3.0",
-                "illuminate/support": "4.x"
+                "illuminate/support": "^5.4"
         },
         "require-dev": {
                 "mockery/mockery": "0.9.*",
